--- a/application/layouts/includes/footer.phtml
+++ b/application/layouts/includes/footer.phtml
@@ -1,5 +1,5 @@
 <footer>
-    <a href='http://www.sdis62.fr' >SDIS62 R&amp;D</a> &amp; <a href='http://www.interieur.gouv.fr' >Ministère de l'intérieur</a> &#183;
+    <a href='http://www.sdis62.fr' >SDIS62 R&amp;D <img src="/images/pastille_sdis62.png" /></a> &amp; <a href='http://www.interieur.gouv.fr' >Ministère de l'intérieur</a> &#183;
     <a href="/about/tos" >Conditions d'utilisation</a> &#183;
     <a href="/about" >À propos de</a> &#183;
     <a href="/about/dev" >Développeurs</a> &#183;
