Rend les boutons d'édition sticky

--- a/application/views/scripts/dossier/edit-verifications-techniques.phtml
+++ b/application/views/scripts/dossier/edit-verifications-techniques.phtml
@@ -1,5 +1,5 @@
 <form action='<?= $this->url(array('action' => 'edit-verifications-techniques')) ?>' method='post' class='form-horizontal'>
-    <div class='pull-right' >
+    <div class='action-buttons pull-right'>
         <div class="btn-group">
             <a class='btn' href="<?= $this->url(array('action' => 'verifications-techniques')) ?>">Annuler la modification</a>
             <input type='submit' class="btn btn-success" value='Sauvegarder'>
