--- a/application/views/scripts/dossier/textes-applicables.phtml
+++ b/application/views/scripts/dossier/textes-applicables.phtml
@@ -1,4 +1,4 @@
-<div class='pull-right' >
+<div class='action-buttons pull-right'>
     <a class='btn' href="<?php echo $this->url(array('action' => 'edit-textes-applicables')) ?>">Modifier les textes applicables</a>
 </div>
 
