--- a/application/views/scripts/dossier/verifications-techniques.phtml
+++ b/application/views/scripts/dossier/verifications-techniques.phtml
@@ -1,4 +1,4 @@
-<div class='pull-right' >
+<div class='action-buttons pull-right'>
     <a class='btn' href="<?= $this->url(array('action' => 'edit-verifications-techniques')) ?>">Modifier les vérifications techniques</a>
 </div>
 
