--- a/application/views/scripts/etablissement/effectifs-degagements-etablissement.phtml
+++ b/application/views/scripts/etablissement/effectifs-degagements-etablissement.phtml
@@ -1,4 +1,4 @@
-<div class='pull-right' >
+<div class='action-buttons pull-right'>
     <a class='btn' href="<?= $this->url(array('action' => 'effectifs-degagements-etablissement-edit')) ?>">Modifier les effectifs et dégagements</a>
 </div>
 
