--- a/application/views/scripts/dossier/edit-textes-applicables.phtml
+++ b/application/views/scripts/dossier/edit-textes-applicables.phtml
@@ -1,5 +1,5 @@
 <form action='<?php echo $this->url(array('action' => 'edit-textes-applicables')) ?>' method='post'>
-    <div class='pull-right' >
+    <div class='action-buttons pull-right'>
         <div class="btn-group">
             <a class='btn' href="<?php echo $this->url(array('action' => 'textes-applicables')) ?>">Annuler la modification</a>
             <input type='submit' class="btn btn-success" value='Sauvegarder'>
