--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -1318,7 +1318,7 @@ $(".delaipresc").live('click', function() {
 <?php
 	$action = $this->do;
 	if ($this->verrouDossier != 1 && 'edit' == $action): ?>
-	<div class='pull-right' style='font-weight:normal'>
+	<div class='action-buttons pull-right' style='font-weight:normal'>
 		<div class="btn-group">
 			<a class="btn" id="modificationDossier" href="#">Modifier le dossier</a>
 			<a id='annulModification' class='btn' style="display:none" href="#">Annuler la modification</a>
