--- a/application/views/scripts/etablissement/descriptif/descriptif-original.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-original.phtml
@@ -1,4 +1,4 @@
-<div class='pull-right' >
+<div class='action-buttons pull-right'>
     <a class='btn' href="<?php echo $this->url(array('action' => 'edit-descriptif')) ?>">Modifier les descriptifs</a>
 </div>
 
@@ -42,7 +42,7 @@
 	        }
 
 	        echo "</dl>";
-	       
+
 	        if($j == 0) {
 	        	echo "<p class='muted'>Aucune donnée disponible</p>";
 	        }
@@ -51,7 +51,7 @@
         	echo '</div>';
 
 	        $i++;
-            
+
             if($i == 3) {
             	echo "</div> <div class='row-fluid' >";
             	$i = 0;
