--- a/application/views/scripts/etablissement/descriptif/edit-descriptif-original.phtml
+++ b/application/views/scripts/etablissement/descriptif/edit-descriptif-original.phtml
@@ -1,6 +1,6 @@
 <form action='<?php echo $this->url(array('action' => 'edit-descriptif')) ?>' method='post'>
 
-    <div class='pull-right' >
+    <div class='action-buttons pull-right'>
         <div class="btn-group">
             <a class='btn' href="<?php echo $this->url(array('action' => 'descriptif')) ?>">Annuler la modification</a>
             <input type='submit' class="btn btn-success" value='Sauvegarder'>
@@ -40,7 +40,7 @@
                     case 'text':
                         echo "<textarea name='descriptifs_techniques[" . $value['key'] . "]' cols='' rows='' style='width: 100%; height: 50px;' maxlength='65535' >" . $value['value'] . "</textarea>";
                         break;
-                    
+
                     case 'char':
                         echo "<input type='text' name='descriptifs_techniques[" . $value['key'] . "]' value='" . $value['value'] . "' maxlength='" . $value['length'] . "' />";
                         break;
@@ -48,15 +48,15 @@
                     default:
                         echo "<input type='text' name='descriptifs_techniques[" . $value['key'] . "]' value='" . $value['value'] . "' />";
                 }
-                
+
                 switch($value['key']) {
-                    
-                    case 'DESCTECH_RISQUES_NATURELS_ETABLISSEMENT': 
+
+                    case 'DESCTECH_RISQUES_NATURELS_ETABLISSEMENT':
                         $risques_naturels = "Avalanche, Cyclonique, Feux de Forêt, Inondation, Mouvement de terrain, Sismique, Submersion marine, Tempête, Volcanique";
                         echo "<i>Exemples de risques naturels : $risques_naturels</i>";
                         break;
-                        
-                    case 'DESCTECH_RISQUES_TECHNOLOGIQUES_ETABLISSEMENT': 
+
+                    case 'DESCTECH_RISQUES_TECHNOLOGIQUES_ETABLISSEMENT':
                         $risques_technologiques = "Industriel, Nucléaire, Rupture de barrage, Transport de matières dangereuses";
                         echo "<i>Exemples de risques technologiques : $risques_technologiques</i>";
                         break;
