fix(carto): libellé incorrect

--- a/application/views/scripts/couches-cartographiques/add-couche-ign.phtml
+++ b/application/views/scripts/couches-cartographiques/add-couche-ign.phtml
@@ -20,7 +20,7 @@
                                 <th scope="col">Nom de la couche</th>
                                 <th scope="col">Nom de la couche dans le flux</th>
                                 <th scope="col">Format de l'image dans le flux</th>
-                                <th scope="col">Couche transparente ?</th>
+                                <th scope="col">Couche masquée ?</th>
                                 <th scope="col"></th>
                             </tr>
                         </thead>
