Harmonise les icônes par rapport aux autres écrans

--- a/application/layouts/menu_admin.phtml
+++ b/application/layouts/menu_admin.phtml
@@ -37,11 +37,11 @@
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'gestion-prescriptions') echo "class='active'" ?> >
-        <a href='/gestion-prescriptions' ><i class="icon-list icon-black"></i> Gestion des prescriptions</a>
+        <a href='/gestion-prescriptions' ><i class="icon-flag icon-black"></i> Gestion des prescriptions</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'gestion-textes-applicables') echo "class='active'" ?> >
-        <a href='/gestion-textes-applicables' ><i class="icon-list-alt icon-black"></i> Gestion des textes applicables</a>
+        <a href='/gestion-textes-applicables' ><i class="icon-align-center icon-black"></i> Gestion des textes applicables</a>
     </li>
 
     <li class="nav-header">Paramétrage du logiciel</li>
