Affiche uniquement les avis & dérogations historisés

--- a/application/layouts/etablissement.phtml
+++ b/application/layouts/etablissement.phtml
@@ -37,7 +37,7 @@
     <?php if ($this->isAllowedAvisDerogations): ?>
         <li class="<?= strpos($action_name, 'avis-derogations-etablissement') !== false ? 'active' : '' ?>">
             <a class='sep' href='<?= $this->url(array("action"=>"avis-derogations-etablissement")) ?>'>
-                <i class="icon-file icon-black"></i>
+                <i class="icon-pencil icon-black"></i>
                 Avis et dérogations
 
                 <?php if($this->hasAvisDerogations): ?>
