--- a/application/views/scripts/calendrier-des-commissions/generationodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationodj.phtml
@@ -250,13 +250,18 @@ function retrieveInfoDoss($segment, $dossierInfos) {
                 addChamp($avisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
                 addChamp($avisDerogations, 'identifiantdossierleve', $avisDerogation['ID_DOSSIER_LIE']);
 
-                if (true === boolval($avisDerogation['DISPLAY_HISTORIQUE'])) {
-                    $avisDerogation['DISPLAY_HISTORIQUE'] = 'Oui';
-                } else {
-                    $avisDerogation['DISPLAY_HISTORIQUE'] = 'Non';
+                $date = null;
+                if (null !== $avisDerogation['DATECOMM_DOSSIER']) {
+                    $date = new Zend_Date($avisDerogation['DATECOMM_DOSSIER'], Zend_Date::DATES);
+                } elseif (null !== $avisDerogation['DATEVISITE_DOSSIER']) {
+                    $date = new Zend_Date($avisDerogation['DATEVISITE_DOSSIER'], Zend_Date::DATES);
                 }
 
-                addChamp($avisDerogations, 'affichagehistorique', $avisDerogation['DISPLAY_HISTORIQUE']);
+                if ($date instanceof Zend_Date) {
+                    $date = $date->get(Zend_Date::DAY_SHORT.' '.Zend_Date::MONTH_NAME_SHORT.' '.Zend_Date::YEAR);
+                }
+
+                addChamp($avisDerogations, 'date', $date);
 
                 $avisDerogations->merge();
             }
